FI-009 固定資産印刷 add quantity

--- a/fico-s4apps01/fixedassetprint/webapp/manifest.json
+++ b/fico-s4apps01/fixedassetprint/webapp/manifest.json
@@ -23,7 +23,7 @@
           "annotations": [
             "annotation"
           ],
-          "localUri": "localService/metadata.xml",
+          "localUri": "localService/mainService/metadata.xml",
           "odataVersion": "4.0"
         }
       },
