--- a/fico-s4apps01/fixedassetprint/ui5-local.yaml
+++ b/fico-s4apps01/fixedassetprint/ui5-local.yaml
@@ -36,8 +36,16 @@ server:
         mountPath: /
         services:
           - urlPath: /sap/opu/odata4/sap/zui_fixedassetprint/srvd/sap/zui_fixedassetprint/0001
-            metadataPath: ./webapp/localService/metadata.xml
-            mockdataPath: ./webapp/localService/data
+            metadataPath: ./webapp/localService/mainService/metadata.xml
+            mockdataPath: ./webapp/localService/mainService/data
+            generateMockData: true
+          - urlPath: /sap/opu/odata4/sap/zui_prt_record_o4/srvd/sap/zui_prt_record_o4/0001
+            metadataPath: ./webapp/localService/ZUI_PRT_RECORD_O4/metadata.xml
+            mockdataPath: ./webapp/localService/PrintService/data
+            generateMockData: true
+          - urlPath: /sap/opu/odata4/sap/zui_permission_access_o4/srvd/sap/zui_permission_access_o4/0001
+            metadataPath: ./webapp/localService/ZUI_PERMISSION_ACCESS_O4/metadata.xml
+            mockdataPath: ./webapp/localService/AuthorityService/data
             generateMockData: true
         annotations: []
     - name: fiori-tools-preview
