--- a/fico-s4apps01/fixedassetprint/ui5-mock.yaml
+++ b/fico-s4apps01/fixedassetprint/ui5-mock.yaml
@@ -30,17 +30,15 @@ server:
         mountPath: /
         services:
           - urlPath: /sap/opu/odata4/sap/zui_fixedassetprint/srvd/sap/zui_fixedassetprint/0001
+            metadataPath: ./webapp/localService/mainService/metadata.xml
+            mockdataPath: ./webapp/localService/mainService/data
             generateMockData: true
-            metadataXmlPath: ./webapp/localService/metadata.xml
-            mockdataRootPath: ./webapp/localService/data
-          - urlPath: /sap/opu/odata4/sap/zui_fixedassetprint/srvd/sap/zui_fixedassetprint/0001/
-            generateMockData: true
-            metadataXmlPath: ./webapp/localService/metadata.xml
-            mockdataRootPath: ./webapp/localService/mockdata
-          - urlPath: /sap/opu/odata4/sap/zui_prt_record_o4/srvd/sap/zui_prt_record_o4/0001/
+          - urlPath: /sap/opu/odata4/sap/zui_prt_record_o4/srvd/sap/zui_prt_record_o4/0001
             metadataPath: ./webapp/localService/ZUI_PRT_RECORD_O4/metadata.xml
-            mockdataPath: ./webapp/localService/ZUI_PRT_RECORD_O4/mockdata
+            mockdataPath: ./webapp/localService/PrintService/data
             generateMockData: true
-        annotations:
-          - localPath: ./webapp/annotations/annotation.xml
-            urlPath: annotations/annotation.xml
+          - urlPath: /sap/opu/odata4/sap/zui_permission_access_o4/srvd/sap/zui_permission_access_o4/0001
+            metadataPath: ./webapp/localService/ZUI_PERMISSION_ACCESS_O4/metadata.xml
+            mockdataPath: ./webapp/localService/AuthorityService/data
+            generateMockData: true
+        annotations: []
