--- a/mm-s4apps01/podataanalysis/ui5-mock.yaml
+++ b/mm-s4apps01/podataanalysis/ui5-mock.yaml
@@ -16,24 +16,34 @@ server:
             - /test-resources
           url: https://ui5.sap.com
         backend:
-          - path: /sap
-            url: https://my412552-api.s4hana.cloud.sap
-            destination: UMC_Dev_Customizing_BTP
+          - authenticationType: reentranceTicket # SAML support for vscode
+            path: /sap
+            url: https://my412552.s4hana.cloud.sap
+            destination: UMC_Dev_Customizing
     - name: fiori-tools-appreload
       afterMiddleware: compression
       configuration:
         port: 35729
         path: webapp
         delay: 300
+    - name: fiori-tools-preview
+      afterMiddleware: fiori-tools-appreload
+      configuration:
+        component: mm.podataanalysis
+        ui5Theme: sap_horizon
     - name: sap-fe-mockserver
       beforeMiddleware: csp
       configuration:
         mountPath: /
         services:
-          - urlPath: /sap/opu/odata4/sap/zui_podataanalysis_o4/srvd/sap/zui_podataanalysis_o4/0001
-            metadataPath: ./webapp/localService/metadata.xml
-            mockdataPath: ./webapp/localService/data
+          - urlPath: /sap/opu/odata/sap/ZUI_PODATAANALYSIS_O2
+            metadataPath: ./webapp/localService/mainService/metadata.xml
+            mockdataPath: ./webapp/localService/mainService/data
+            generateMockData: true
+          - urlPath: /sap/opu/odata4/sap/zui_permission_access_o4/srvd/sap/zui_permission_access_o4/0001
+            metadataPath: ./webapp/localService/ZUI_PERMISSION_ACCESS_O4/metadata.xml
+            mockdataPath: ./webapp/localService/AuthorityService/data
             generateMockData: true
         annotations:
-          - localPath: ./webapp/annotations/annotation.xml
-            urlPath: annotations/annotation.xml
+          - localPath: ./webapp/localService/mainService/ZUI_PODATAANALYSIS_O2_VAN.xml
+            urlPath: /sap/opu/odata/IWFND/CATALOGSERVICE;v=2/Annotations(TechnicalName='ZUI_PODATAANALYSIS_O2_VAN',Version='0001')/$value/
