--- a/mm-s4apps01/podataanalysis/ui5.yaml
+++ b/mm-s4apps01/podataanalysis/ui5.yaml
@@ -16,9 +16,10 @@ server:
             - /test-resources
           url: https://ui5.sap.com
         backend:
-          - path: /sap
-            url: https://my412552-api.s4hana.cloud.sap
-            destination: UMC_Dev_Customizing_BTP
+          - authenticationType: reentranceTicket # SAML support for vscode
+            path: /sap
+            url: https://my412552.s4hana.cloud.sap
+            destination: UMC_Dev_Customizing
     - name: fiori-tools-appreload
       afterMiddleware: compression
       configuration:
