--- a/mm-s4apps01/podataanalysis/webapp/manifest.json
+++ b/mm-s4apps01/podataanalysis/webapp/manifest.json
@@ -11,27 +11,20 @@
     "description": "{{appDescription}}",
     "resources": "resources.json",
     "sourceTemplate": {
-      "id": "@sap/generator-fiori:lrop",
-      "version": "1.14.5",
-      "toolsId": "0d1f6a0f-eeb9-4148-8fa4-4f459c189ceb"
+      "id": "@sap/generator-fiori:basic",
+      "version": "1.17.1",
+      "toolsId": "9e272fe8-18ab-4c67-93f8-5cbd422f8ea2"
     },
     "dataSources": {
       "mainService": {
-        "uri": "/sap/opu/odata4/sap/zui_podataanalysis_o4/srvd/sap/zui_podataanalysis_o4/0001/",
+        "uri": "/sap/opu/odata/sap/ZUI_PODATAANALYSIS_O2/",
         "type": "OData",
         "settings": {
           "annotations": [
-            "annotation"
+            "ZUI_PODATAANALYSIS_O2_VAN"
           ],
-          "localUri": "localService/metadata.xml",
-          "odataVersion": "4.0"
-        }
-      },
-      "annotation": {
-        "type": "ODataAnnotation",
-        "uri": "annotations/annotation.xml",
-        "settings": {
-          "localUri": "annotations/annotation.xml"
+          "localUri": "localService/mainService/metadata.xml",
+          "odataVersion": "2.0"
         }
       },
       "AuthorityService": {
@@ -41,6 +34,22 @@
           "annotations": [],
           "localUri": "localService/ZUI_PERMISSION_ACCESS_O4/metadata.xml",
           "odataVersion": "4.0"
+        }
+      },
+      "ZUI_PODATAANALYSIS_O2_VAN": {
+        "uri": "/sap/opu/odata/IWFND/CATALOGSERVICE;v=2/Annotations(TechnicalName='ZUI_PODATAANALYSIS_O2_VAN',Version='0001')/$value/",
+        "type": "ODataAnnotation",
+        "settings": {
+          "localUri": "localService/mainService/ZUI_PODATAANALYSIS_O2_VAN.xml"
+        }
+      },
+      "MRPService": {
+        "uri": "/sap/opu/odata/sap/ZUI_INVENTORYREQUIREMENTO2/",
+        "type": "OData",
+        "settings": {
+          "annotations": [],
+          "localUri": "localService/ZUI_INVENTORYREQUIREMENTO2/metadata.xml",
+          "odataVersion": "2.0"
         }
       }
     },
@@ -75,13 +84,15 @@
     }
   },
   "sap.ui5": {
-    "flexEnabled": true,
+    "flexEnabled": false,
+    "config": {
+      "fullWidth": true
+    },
     "dependencies": {
       "minUI5Version": "1.120.18",
       "libs": {
         "sap.m": {},
-        "sap.ui.core": {},
-        "sap.fe.templates": {}
+        "sap.ui.core": {}
       }
     },
     "contentDensities": {
@@ -107,56 +118,68 @@
       "@i18n": {
         "type": "sap.ui.model.resource.ResourceModel",
         "uri": "i18n/i18n.properties"
-        },
-        "Authority": {
-          "dataSource": "AuthorityService",
-          "preload": true,
-          "settings": {
-            "synchronizationMode": "None",
-            "operationMode": "Server",
-            "autoExpandSelect": true,
-            "earlyRequests": true
-          }
+      },
+      "Authority": {
+        "dataSource": "AuthorityService",
+        "preload": true,
+        "settings": {
+          "synchronizationMode": "None",
+          "operationMode": "Server",
+          "autoExpandSelect": true,
+          "earlyRequests": true
         }
+      },
+      "MRP": {
+        "dataSource": "MRPService",
+        "preload": true,
+        "settings": {
+          "operationMode": "Server",
+          "autoExpandSelect": true,
+          "earlyRequests": true
+        }
+      }
     },
     "resources": {
-      "css": []
+      "css": [
+        {
+          "uri": "css/style.css"
+        }
+      ]
     },
     "routing": {
-      "config": {},
+      "config": {
+        "routerClass": "sap.m.routing.Router",
+        "controlAggregation": "pages",
+        "controlId": "app",
+        "transition": "slide",
+        "type": "View",
+        "viewType": "XML",
+        "path": "mm.podataanalysis.view",
+        "async": true,
+        "viewPath": "mm.podataanalysis.view"
+      },
       "routes": [
         {
-          "pattern": ":?query:",
-          "name": "PODataAnalysisList",
-          "target": "PODataAnalysisList"
+          "name": "Main",
+          "pattern": "",
+          "target": [
+            "Main"
+          ]
         }
       ],
       "targets": {
-        "PODataAnalysisList": {
-          "type": "Component",
-          "id": "PODataAnalysisList",
-          "name": "sap.fe.templates.ListReport",
-          "options": {
-            "settings": {
-              "contextPath": "/PODataAnalysis",
-              "variantManagement": "Page",
-              "controlConfiguration": {
-                "@com.sap.vocabularies.UI.v1.LineItem": {
-                  "tableSettings": {
-                    "type": "GridTable",
-                    "enableExport": true
-                  }
-                }
-              }
-            }
-          }
+        "Main": {
+          "id": "Main",
+          "name": "Main"
         }
       }
+    },
+    "rootView": {
+      "viewName": "mm.podataanalysis.view.App",
+      "type": "XML",
+      "id": "App",
+      "async": true
     }
-  },
-  "sap.fiori": {
-    "registrationIds": [],
-    "archeType": "transactional"
   },
   "sap.cloud": {
     "public": true,
