SD-019 請求書出力 画面优化

--- a/sd-s4apps01/invoiceprint/webapp/manifest.json
+++ b/sd-s4apps01/invoiceprint/webapp/manifest.json
@@ -174,7 +174,8 @@
                     "selectionMode": "Multi",
                     "quickVariantSelection": {
                       "showCounts": true
-                    }
+                    },
+                    "selectAll": true
                   },
                   "actions": {
                     "ListReportExt": {
